Optimize ARM-NEON support WIP
Signed-off-by: Andreas Müller <schnitzeltony@googlemail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -39,3 +39,6 @@ IF(PA_USE_WMME AND WIN32)
 ENDIF()
 ADD_EXAMPLE(paex_write_sine)
 ADD_EXAMPLE(paex_write_sine_nonint)
+ADD_EXECUTABLE(paex_accel_performance paex_accel_performance.c ../src/common/pa_converters.c ../src/common/pa_dither.c)
+TARGET_INCLUDE_DIRECTORIES(paex_accel_performance PRIVATE ../src/common)
+TARGET_INCLUDE_DIRECTORIES(paex_accel_performance PUBLIC ../include)
